syntax = "proto3";
import "db_base.proto";
import "account_database.proto";
import "comp.proto";

message account_database
{
  option(OptionTableName)  = "account";
  option(OptionPrimaryKey) = "account";
  string account = 1;
  string password = 2;
  account_simple_players simple_players = 3;
}

message player_database
{
  option(OptionTableName)  = "player";
  option(OptionPrimaryKey) = "guid";
  option(OptionAutoIncrementKey) = "guid";
  uint64 guid = 1;
  Vector3 pos = 2;
  int64 register_time = 3;
}